<resources>
    <string name="app_name">Sikarma</string>

    <string name="title_add_symptom_data">Tambah Data Gejala</string>
    <string name="title_edit_symptom_data">Ubah Data Gejala</string>
    <string name="title_add_type_data">Tambah Data Penyakit</string>
    <string name="title_symptom_data">Data Gejala Penyakit</string>
    <string name="title_type_data">Data Jenis Penyakit</string>
    <string name="title_detail_type_data">Detail Jenis Penyakit</string>
    <string name="title_rule_data">Data Aturan Penyakit</string>
    <string name="title_detail_rule_data">Detail Aturan</string>
    <string name="title_list_type_data">Daftar Jenis Penyakit Asma</string>
    <string name="title_edit_type_data">Ubah Data Penyakit</string>
    <string name="title_add_rule_data">Tambah Data Aturan</string>
    <string name="title_edit_rule_data">Ubah Data Aturan</string>
    <string name="title_symptom_code">Kode gejala</string>
    <string name="title_symptom_name">Nama gejala</string>
    <string name="title_type_code">Kode penyakit</string>
    <string name="title_type_name">Jenis penyakit</string>
    <string name="title_rule_code">Kode rule</string>
    <string name="title_description">Deskripsi</string>
    <string name="title_solution">Solusi</string>
    <string name="title_symptom_list">List gejala penyakit</string>
    <string name="title_patient_name">Nama</string>
    <string name="title_date">Tanggal diagnosa</string>
    <string name="title_time">Waktu</string>
    <string name="title_age">Usia</string>
    <string name="title_gender">Jenis kelamin</string>
    <string name="title_full_name">Nama lengkap</string>
    <string name="title_consultation">Konsultasi</string>
    <string name="title_diagnostic_result">Hasil Diagnosa</string>
    <string name="title_patient_data">Data pasien</string>
    <string name="title_early_diagnosis">Hasil diagnosa awal</string>
    <string name="title_early_diagnosis_caps">*Hasil Diagnosa Awal*</string>
    <string name="title_type_of_asthma">Jenis asma</string>
    <string name="title_dialog_share">Salin atau Bagikan Hasil Diagnosa</string>

    <string name="label_result">: %s</string>
    <string name="label_age">: %s tahun</string>
    <string name="label_login_admin">Masuk admin</string>
    <string name="label_register_admin">Daftar admin</string>
    <string name="label_consultation">Konsultasi penyakit</string>
    <string name="label_types">Lihat jenis penyakit</string>
    <string name="label_consultation_image">Gambar ilustrasi konsultasi</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Masuk</string>
    <string name="label_sign_out">Keluar</string>
    <string name="label_register">Daftar</string>
    <string name="label_sign_in_success">Kamu berhasil login!</string>
    <string name="label_sign_in_failed">Username atau Password salah!</string>
    <string name="label_symptoms_code_and_name">%s - %s</string>
    <string name="label_set_symptom">Atur gejala penyakit</string>
    <string name="label_set_type">Atur jenis penyakit</string>
    <string name="label_set_rule">Atur rule penyakit</string>
    <string name="label_button_start_consultation">Mulai konsultasi</string>
    <string name="label_button_set_symptom">Button atur gejala asma</string>
    <string name="label_button_set_type">Button atur jenis asma</string>
    <string name="label_button_set_rule">Button atur rule asma</string>
    <string name="label_button_delete_data">Button hapus data</string>
    <string name="label_button_edit_data">Button edit data</string>
    <string name="label_button_finish">Selesai</string>
    <string name="label_button_share">Bagikan</string>
    <string name="label_button_diagnose">Diagnosis</string>
    <string name="label_button_yes">Ya</string>
    <string name="label_button_no">Tidak</string>
    <string name="label_button_cancel">Batal</string>
    <string name="label_hint_input_symptom_code">Masukkan kode gejala</string>
    <string name="label_hint_input_symptom_name">Masukkan gejala</string>
    <string name="label_save_data">Simpan data</string>
    <string name="label_edit_data">Ubah</string>
    <string name="label_delete_data">Hapus</string>
    <string name="label_hint_input_type_code">Masukkan kode jenis</string>
    <string name="label_hint_input_type_name">Masukkan jenis asma</string>
    <string name="label_hint_input_description">Masukkan deskripsi</string>
    <string name="label_hint_input_solution">Masukkan solusi</string>
    <string name="label_hint_input_rule_code">Masukkan kode rule</string>
    <string name="label_hint_choose_type">Pilih jenis penyakit</string>
    <string name="label_consultation_question">%s - %s</string>
    <string name="label_man">Pria</string>
    <string name="label_woman">Wanita</string>
    <string name="label_no_result">Penyakit tidak ditemukan</string>
    <string name="label_undefined">Undefined</string>
    <string name="label_confirmation">Konfirmasi</string>
    <string name="label_logout">Ingin keluar admin?</string>
    <string name="label_delete_confirmation">Yakin ingin menghapus?</string>
    <string name="label_deleted_successfully">Data berhasil dihapus</string>
    <string name="label_updated_successfully">Data berhasil diubah</string>
    <string name="label_update_confirmation">Yakin ingin mengubah data?</string>
    <string name="label_add_successfully">Data berhasil disimpan</string>
    <string name="label_data_exist">Data telah tersedia</string>
    <string name="label_account_registered">Akun telah terdaftar</string>
    <string name="label_account_register_successfully">Register akun berhasil. Silahkan login menggunakan akun yang telah terdaftar</string>
    <string name="label_form_alert">Isi form di bawah ini dengan benar untuk melanjutkan sesi konsultasi</string>
    <string name="label_consultation_alert">Harap pilih gejala asma yang sedang atau pernah Anda rasakan</string>
    <string name="label_male">Laki-laki</string>
    <string name="label_female">Perempuan</string>
    <string name="label_example_name">Cth: Ari Lesmana</string>
    <string name="label_example_age">Cth: 20</string>
</resources>