<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_list_rule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        app:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@android:color/white">

        <RelativeLayout
            android:id="@+id/rl_list_rule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_rule_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/title_rule_code"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_type_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_rule_code"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/title_type_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_symptom_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_type_name"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/title_symptom_code"
                android:textColor="@color/white" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>